Wed Sep  7 17:27:18 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/yaml.rb: explicitly specify ::Object to avoid the collision with
	  Syck::Object.

Tue Sep  6 21:06:49 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb (_run_suites): Now reports are written the
	  following order: Skip, Failure, Error. [Feature #5282]

	* test_sorting.rb: test for above.

	* test4test_sorting.rb: Ditto.

	* lib/test/unit.rb (run): Put RUBY_DESCIPTION before quitting.
	  [Feature #5282]

Tue Sep  6 21:13:47 2011  Masaya Tarui  <tarui@ruby-lang.org>

	* win32/Makefile.sub (INSNS): change command line option -Ks to -Ku
	  for generate *.inc. because insns.def encoding has been changed SJIS
	  to UTF-8. if $BASERUBY is 1.9, -Ks cause an error. [Feature #5128] 
	  (same as r33194)

Tue Sep  6 15:55:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (load_transcoder_entry): concatenate paths directly.

	* encoding.c (load_encoding): predefined encoding names are safe.
	  [ruby-dev:44469] [Bug #5279]

	* transcode.c (load_transcoder_entry): ditto.

Tue Sep  6 12:07:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c: enabled econv newline option.

Tue Sep  6 06:44:57 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (dbl2ival): Fix Float#divmod and #round for 32 bit
	  platform. part 1 of [bug #5276]

Tue Sep  6 06:44:25 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (flo_round): Fix criteria for 32 bits platform
	  part 2 of [bug #5276]

Tue Sep  6 05:37:11 2011  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb (test_core_03_notify): Fixed test failures
	  [ruby-dev:44430] [Ruby 1.9 - Bug #372]

Mon Sep  5 20:59:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* insns.def: change encoding pragma for emacs (shift_jis to utf-8).

Mon Sep  5 19:32:15 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* Makefile.in (INSNS): change command line option -Ks to -Ku for